Changed fonts on navigation pages

--- a/app/src/main/res/layout/fragment_navigation_pureblack.xml
+++ b/app/src/main/res/layout/fragment_navigation_pureblack.xml
@@ -80,7 +80,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
-                            android:fontFamily="@font/timeburnernormal"
+                            android:fontFamily="@font/raleway"
                             android:gravity="center"
                             android:text="Disrespect"
                             android:textColor="@color/disrespect"
@@ -132,7 +132,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
-                            android:fontFamily="@font/timeburnernormal"
+                            android:fontFamily="@font/raleway"
                             android:gravity="center"
                             android:text="Saints"
                             android:textColor="@color/saints"
@@ -184,7 +184,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
-                            android:fontFamily="@font/timeburnernormal"
+                            android:fontFamily="@font/raleway"
                             android:gravity="center"
                             android:text="Phlox"
                             android:textColor="@color/phlox"
@@ -203,7 +203,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginLeft="16dp"
                     android:layout_marginTop="16dp"
-                    android:fontFamily="@font/timeburnernormal"
+                    android:fontFamily="@font/raleway_bold"
                     android:text="@string/purple_themes"
                     android:textColor="@color/phlox"
                     android:textSize="24sp"
@@ -264,7 +264,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
-                            android:fontFamily="@font/timeburnernormal"
+                            android:fontFamily="@font/raleway"
                             android:gravity="center"
                             android:text="Orange"
                             android:textColor="@color/orange"
@@ -316,7 +316,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
-                            android:fontFamily="@font/timeburnernormal"
+                            android:fontFamily="@font/raleway"
                             android:gravity="center"
                             android:text="League"
                             android:textColor="@color/lolchat"
@@ -368,7 +368,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
-                            android:fontFamily="@font/timeburnernormal"
+                            android:fontFamily="@font/raleway"
                             android:gravity="center"
                             android:text="Autumn"
                             android:textColor="@color/autumn"
@@ -420,7 +420,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
-                            android:fontFamily="@font/timeburnernormal"
+                            android:fontFamily="@font/raleway"
                             android:gravity="center"
                             android:text="Au"
                             android:textColor="@color/au"
@@ -439,7 +439,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginLeft="16dp"
                     android:layout_marginTop="16dp"
-                    android:fontFamily="@font/timeburnernormal"
+                    android:fontFamily="@font/raleway_bold"
                     android:text="@string/orange_themes"
                     android:textColor="@color/orange"
                     android:textSize="24sp"
@@ -500,7 +500,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
-                            android:fontFamily="@font/timeburnernormal"
+                            android:fontFamily="@font/raleway"
                             android:gravity="center"
                             android:text="Pixel Blue"
                             android:textColor="@color/pixelBlue"
@@ -557,7 +557,7 @@
                             android:layout_marginStart="2dp"
                             android:layout_marginLeft="2dp"
                             android:layout_marginBottom="8dp"
-                            android:fontFamily="@font/timeburnernormal"
+                            android:fontFamily="@font/raleway"
                             android:gravity="center"
                             android:text="Oxygen"
                             android:textColor="@color/oxygen"
@@ -611,7 +611,7 @@
                             android:layout_marginStart="2dp"
                             android:layout_marginLeft="2dp"
                             android:layout_marginBottom="8dp"
-                            android:fontFamily="@font/timeburnernormal"
+                            android:fontFamily="@font/raleway"
                             android:gravity="center"
                             android:text="Cyanogen"
                             android:textColor="@color/cyanogen"
@@ -630,7 +630,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginLeft="16dp"
                     android:layout_marginTop="16dp"
-                    android:fontFamily="@font/timeburnernormal"
+                    android:fontFamily="@font/raleway_bold"
                     android:text="@string/blue_themes"
                     android:textColor="@color/oxygen"
                     android:textSize="24sp"
@@ -691,7 +691,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
-                            android:fontFamily="@font/timeburnernormal"
+                            android:fontFamily="@font/raleway"
                             android:gravity="center"
                             android:text="Teal"
                             android:textColor="@color/teal"
@@ -743,7 +743,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
-                            android:fontFamily="@font/timeburnernormal"
+                            android:fontFamily="@font/raleway"
                             android:gravity="center"
                             android:text="Monster"
                             android:textColor="@color/monster"
@@ -797,7 +797,7 @@
                             android:layout_marginStart="2dp"
                             android:layout_marginLeft="2dp"
                             android:layout_marginBottom="8dp"
-                            android:fontFamily="@font/timeburnernormal"
+                            android:fontFamily="@font/raleway"
                             android:gravity="center"
                             android:text="Mint"
                             android:textColor="@color/mint"
@@ -851,7 +851,7 @@
                             android:layout_marginStart="2dp"
                             android:layout_marginLeft="2dp"
                             android:layout_marginBottom="8dp"
-                            android:fontFamily="@font/timeburnernormal"
+                            android:fontFamily="@font/raleway"
                             android:gravity="center"
                             android:text="G. Sunset"
                             android:textColor="@color/greenSunset"
@@ -870,7 +870,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginLeft="16dp"
                     android:layout_marginTop="16dp"
-                    android:fontFamily="@font/timeburnernormal"
+                    android:fontFamily="@font/raleway_bold"
                     android:text="@string/green_themes"
                     android:textColor="@color/monster"
                     android:textSize="24sp"
@@ -931,7 +931,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
-                            android:fontFamily="@font/timeburnernormal"
+                            android:fontFamily="@font/raleway"
                             android:gravity="center"
                             android:text="Redleaf"
                             android:textColor="@color/redleaf"
@@ -983,7 +983,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
-                            android:fontFamily="@font/timeburnernormal"
+                            android:fontFamily="@font/raleway"
                             android:gravity="center"
                             android:text="Red"
                             android:textColor="@color/red"
@@ -1037,7 +1037,7 @@
                             android:layout_marginStart="2dp"
                             android:layout_marginLeft="2dp"
                             android:layout_marginBottom="8dp"
-                            android:fontFamily="@font/timeburnernormal"
+                            android:fontFamily="@font/raleway"
                             android:gravity="center"
                             android:text="Quetzal"
                             android:textColor="@color/quetzal"
@@ -1091,7 +1091,7 @@
                             android:layout_marginStart="2dp"
                             android:layout_marginLeft="2dp"
                             android:layout_marginBottom="8dp"
-                            android:fontFamily="@font/timeburnernormal"
+                            android:fontFamily="@font/raleway"
                             android:gravity="center"
                             android:text="Crimson"
                             android:textColor="@color/crimson"
@@ -1110,7 +1110,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginLeft="16dp"
                     android:layout_marginTop="16dp"
-                    android:fontFamily="@font/timeburnernormal"
+                    android:fontFamily="@font/raleway_bold"
                     android:text="@string/red_themes"
                     android:textColor="@color/invInferno"
                     android:textSize="24sp"
@@ -1173,7 +1173,7 @@
                             android:layout_marginStart="2dp"
                             android:layout_marginLeft="2dp"
                             android:layout_marginBottom="8dp"
-                            android:fontFamily="@font/timeburnernormal"
+                            android:fontFamily="@font/raleway"
                             android:gravity="center"
                             android:text="Phlox"
                             android:textColor="@color/phlox"
@@ -1227,7 +1227,7 @@
                             android:layout_marginStart="2dp"
                             android:layout_marginLeft="2dp"
                             android:layout_marginBottom="8dp"
-                            android:fontFamily="@font/timeburnernormal"
+                            android:fontFamily="@font/raleway"
                             android:gravity="center"
                             android:text="Crimson"
                             android:textColor="@color/crimson"
@@ -1281,7 +1281,7 @@
                             android:layout_marginStart="2dp"
                             android:layout_marginLeft="2dp"
                             android:layout_marginBottom="8dp"
-                            android:fontFamily="@font/timeburnernormal"
+                            android:fontFamily="@font/raleway"
                             android:gravity="center"
                             android:text="Pixel Blue"
                             android:textColor="@color/pixelBlue"
@@ -1335,7 +1335,7 @@
                             android:layout_marginStart="2dp"
                             android:layout_marginLeft="2dp"
                             android:layout_marginBottom="8dp"
-                            android:fontFamily="@font/timeburnernormal"
+                            android:fontFamily="@font/raleway"
                             android:gravity="center"
                             android:text="Standard"
                             android:textColor="#fff"
@@ -1354,7 +1354,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginLeft="16dp"
                     android:layout_marginTop="16dp"
-                    android:fontFamily="@font/timeburnernormal"
+                    android:fontFamily="@font/raleway_bold"
                     android:text="@string/favorite_themes"
                     android:textColor="#fff"
                     android:textSize="24sp"
