--- a/app/src/main/res/layout/fragment_navigation_tgxthemes.xml
+++ b/app/src/main/res/layout/fragment_navigation_tgxthemes.xml
@@ -31,7 +31,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
-                android:fontFamily="@font/timeburnernormal"
+                android:fontFamily="@font/raleway"
                 android:gravity="center"
                 android:maxEms="20"
                 android:singleLine="false"
@@ -110,7 +110,7 @@
                                 android:layout_marginEnd="8dp"
                                 android:layout_marginRight="8dp"
                                 android:layout_marginBottom="8dp"
-                                android:fontFamily="@font/timeburnernormal"
+                                android:fontFamily="@font/raleway"
                                 android:foregroundGravity="center"
                                 android:text="Inverted"
                                 android:textColor="#fff"
@@ -165,7 +165,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="8dp"
-                                android:fontFamily="@font/timeburnernormal"
+                                android:fontFamily="@font/raleway"
                                 android:foregroundGravity="center"
                                 android:text="Jam"
                                 android:textColor="@color/jam"
@@ -219,7 +219,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="8dp"
-                                android:fontFamily="@font/timeburnernormal"
+                                android:fontFamily="@font/raleway"
                                 android:gravity="center"
                                 android:text="Teal"
                                 android:textColor="@color/teal"
@@ -271,7 +271,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="8dp"
-                                android:fontFamily="@font/timeburnernormal"
+                                android:fontFamily="@font/raleway"
                                 android:gravity="center"
                                 android:text="Pixel Blue"
                                 android:textColor="@color/pixelBlue"
@@ -325,7 +325,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="8dp"
-                                android:fontFamily="@font/timeburnernormal"
+                                android:fontFamily="@font/raleway"
                                 android:gravity="center"
                                 android:text="Inferno"
                                 android:textColor="@color/invInferno"
@@ -349,7 +349,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
-                android:fontFamily="@font/timeburnernormal"
+                android:fontFamily="@font/raleway_bold"
                 android:text="@string/pickyourpoison"
                 android:textColor="#fff"
                 android:textSize="26sp"
