--- a/app/src/main/res/layout/fragment_navigation_other.xml
+++ b/app/src/main/res/layout/fragment_navigation_other.xml
@@ -27,7 +27,7 @@
                 android:layout_height="39dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
-                android:fontFamily="@font/timeburnernormal"
+                android:fontFamily="@font/raleway_bold"
                 android:text="@string/themes"
                 android:textColor="#fff"
                 android:textSize="26sp"
@@ -80,7 +80,7 @@
                         android:layout_marginEnd="8dp"
                         android:layout_marginRight="8dp"
                         android:layout_marginBottom="8dp"
-                        android:fontFamily="@font/timeburnernormal"
+                        android:fontFamily="@font/raleway_bold"
                         android:gravity="center"
                         android:maxEms="20"
                         android:singleLine="false"
@@ -158,7 +158,7 @@
                                 android:layout_marginStart="2dp"
                                 android:layout_marginLeft="2dp"
                                 android:layout_marginBottom="8dp"
-                                android:fontFamily="@font/timeburnernormal"
+                                android:fontFamily="@font/font/raleway"
                                 android:gravity="center"
                                 android:text="Inv. Inferno"
                                 android:textColor="@color/invInferno"
@@ -213,7 +213,7 @@
                                 android:layout_marginStart="2dp"
                                 android:layout_marginLeft="2dp"
                                 android:layout_marginBottom="8dp"
-                                android:fontFamily="@font/timeburnernormal"
+                                android:fontFamily="@font/font/raleway"
                                 android:gravity="center"
                                 android:text="Inverted"
                                 android:textColor="#fff"
@@ -270,7 +270,7 @@
                                 android:layout_marginStart="2dp"
                                 android:layout_marginLeft="2dp"
                                 android:layout_marginBottom="8dp"
-                                android:fontFamily="@font/timeburnernormal"
+                                android:fontFamily="@font/font/raleway"
                                 android:gravity="center"
                                 android:text="Steam"
                                 android:textColor="@color/steam2"
@@ -325,7 +325,7 @@
                                 android:layout_marginStart="2dp"
                                 android:layout_marginLeft="2dp"
                                 android:layout_marginBottom="8dp"
-                                android:fontFamily="@font/timeburnernormal"
+                                android:fontFamily="@font/font/raleway"
                                 android:gravity="center"
                                 android:text="AOSPEx."
                                 android:textColor="@color/aospextended"
